--- a/app/src/main/res/layout/activity_news_preferences_constraint_layout.xml
+++ b/app/src/main/res/layout/activity_news_preferences_constraint_layout.xml
@@ -199,8 +199,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="?attr/actionBarSize"
-        app:indicatorColor="@color/purple_700"
-        app:trackColor="@color/purple_200"
+        app:indicatorColor="@color/teal_700"
+        app:trackColor="@color/teal_200"
         android:indeterminate="true"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
