--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,8 +10,8 @@
         android:id="@+id/button_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/purple_500"
-        app:rippleColor="@color/purple_200"
+        android:backgroundTint="@color/teal_500"
+        app:rippleColor="@color/teal_200"
         android:text="@string/logout"
         android:textColor="@color/white"
         android:textSize="14sp"
