--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/main_item"
-        android:title="@string/news">
+        android:title="@string/campionato">
         <menu>
             <item
                 android:id="@+id/fragment_country_news"
