--- a/app/src/main/res/layout/fragment_favorite_campionato.xml
+++ b/app/src/main/res/layout/fragment_favorite_campionato.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.FavoriteNewsFragment">
+    tools:context=".ui.main.FavoriteCampionatoFragment">
 
     <ListView
         android:id="@+id/listview_fav_news"
