--- a/app/src/main/res/layout/favorite_campionato_list_item.xml
+++ b/app/src/main/res/layout/favorite_campionato_list_item.xml
@@ -5,48 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?android:selectableItemBackground"
-    android:descendantFocusability="blocksDescendants">
+    android:descendantFocusability="blocksDescendants"
+    android:padding="8dp">
 
     <!-- android:descendantFocusability="blocksDescendants" (inserted above)
          enables the listener associated with a ListView item when it contains
          other Widgets that have their own OnClickListener (e.g., Button) -->
 
-    <TextView
-        android:id="@+id/textview_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:textAppearance="?attr/textAppearanceTitleMedium"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_news"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="@string/news_list_item_title" />
-
-    <TextView
-        android:id="@+id/textview_date"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="16dp"
-        android:textAppearance="?attr/textAppearanceBody1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite_news"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_title"
-        tools:text="@string/news_list_item_date" />
-
     <ImageView
-        android:id="@+id/imageview_favorite_news"
+        android:id="@+id/imageview_sex"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:focusable="true"
-        android:contentDescription="@string/content_description_fav_delete"
-        android:src="@drawable/ic_baseline_favorite_24"
+        android:focusable="false"
         android:padding="12dp"
+        android:src="@drawable/ic_baseline_man_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textview_nome"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?attr/textAppearanceTitleMedium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/imageview_favorite"
+        app:layout_constraintStart_toEndOf="@id/imageview_sex"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/campionato_list_item_nome" />
+
+    <ImageView
+        android:id="@+id/imageview_favorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/content_description_fav_delete"
+        android:focusable="true"
+        android:padding="12dp"
+        android:src="@drawable/ic_baseline_favorite_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
