--- a/app/src/main/res/layout/fragment_partita_list.xml
+++ b/app/src/main/res/layout/fragment_partita_list.xml
@@ -9,7 +9,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/topic_news"
+        android:text="@string/partita_list"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
