--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -8,17 +8,17 @@
                 android:id="@+id/fragment_country_news"
                 android:icon="@drawable/ic_globe"
                 android:checkable="true"
-                android:title="@string/country_news" />
+                android:title="@string/campionato_list" />
             <item
                 android:id="@+id/fragment_topic_news"
                 android:icon="@drawable/ic_baseline_topic_24"
                 android:checkable="true"
-                android:title="@string/topic_news"/>
+                android:title="@string/partita_list"/>
             <item
                 android:id="@+id/fragment_favorite_news"
                 android:icon="@drawable/ic_baseline_favorite_24"
                 android:checkable="true"
-                android:title="@string/favorite_news"/>
+                android:title="@string/favorite_campionato"/>
         </menu>
     </item>
     <item
