--- a/app/src/main/res/layout/fragment_favorite_campionato.xml
+++ b/app/src/main/res/layout/fragment_favorite_campionato.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.main.FavoriteCampionatoFragment">
 
     <ListView
-        android:id="@+id/listview_fav_news"
+        android:id="@+id/listview_fav_campionato"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="80dp"
